--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,25 +14,18 @@ pipeline {
 				
 					steps {
 								echo "this is stage 1"
-								sleep 10
+							
 					}
 				
 				}
+				
 				
 				stage ('two') {
 				
-					steps {
-							echo "this is stage 2"
-							sleep 10
-					}
-				}
-				
-				
-				stage ('three') {
-				
 						steps {
 								echo "this is stage 3"
-								sleep 10
+								sh "yum install httpd -y"
+								sh "cp /root/.jenkins/workspace/'test 4'/index.html /var/www/html
 						}
 				}
 			
