--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
 								echo "this is stage 3"
 								sh "rm -rf *"
 								sh "yum install httpd -y"
-								sh "cp /root/.jenkins/workspace/test 4/index.html /var/www/html
+								sh "cp /root/.jenkins/workspace/'test 4/index.html' /var/www/html
 						}
 				}
 			
