--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
 	stages {
 		stage ("cleaning repo files and webapp file"){
 			steps {
-				sh "rm -rf /root/.m2/ *"
+				sh "rm -rf /root/.m2/repository/ *"
 				sh "rm -rf /mnt/project/ *"
 				sh "rm -rf /mnt/servers/apache-tomcat-10.1.49/webapps/LoginWebApp*"
 			}
